<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarHolder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:elevation="10dp"
        android:animateLayoutChanges="true"
        android:background="@color/dark_ink"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_24sdp"
            android:text="@string/account_login"
            android:layout_marginStart="@dimen/medium_margin"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_dimens"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/topBarHolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:paddingVertical="@dimen/extra_small_margin"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:background="@drawable/corner_dashed_background"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/id"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/info_circle"
            app:tint="@color/white"
            android:layout_marginStart="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_large_text_size"
            android:text="@string/user_id"
            android:layout_marginStart="@dimen/medium_margin"
            app:layout_constraintStart_toEndOf="@id/id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_size"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/username"
        android:layout_marginStart="@dimen/medium_margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/large_corner_background"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:padding="@dimen/small_margin"
        android:paddingStart="@dimen/medium_margin"
        android:drawablePadding="@dimen/small_margin"
        android:paddingEnd="@dimen/medium_margin"
        android:drawableStart="@drawable/user"
        android:drawableTint="@color/white"
        android:textColor="@color/white"
        android:textSize="24sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        android:text="@string/email"
        android:layout_marginStart="@dimen/medium_margin"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/large_corner_background"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:padding="@dimen/small_margin"
        android:paddingStart="@dimen/medium_margin"
        android:drawablePadding="@dimen/small_margin"
        android:paddingEnd="@dimen/medium_margin"
        android:drawableStart="@drawable/at"
        android:drawableTint="@color/white"
        android:textColor="@color/white"
        android:textSize="24sp"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAction"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/logut"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/large_corner_background"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:textAllCaps="false"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/txtInputBalance"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>