<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarHolder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:elevation="10dp"
        android:background="@color/dark_ink"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chevron_left"
            android:padding="@dimen/medium_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:text="@string/account_details"
            app:layout_constraintStart_toEndOf="@id/imgBackBtn"
            app:layout_constraintTop_toTopOf="@id/imgBackBtn"
            app:layout_constraintBottom_toBottomOf="@id/imgBackBtn"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_dimens"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/topBarHolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:paddingVertical="@dimen/extra_small_margin"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:background="@drawable/corner_dashed_background"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/IBAN"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/info_circle"
                app:tint="@color/white"
                android:layout_marginStart="@dimen/medium_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtIbanInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_large_text_size"
                android:text="@string/iban"
                android:layout_marginStart="@dimen/extra_small_margin"
                app:layout_constraintStart_toEndOf="@id/IBAN"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtIBAN"
                android:layout_width="@dimen/no_dimens"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size"
                android:layout_marginEnd="@dimen/medium_margin"
                android:layout_marginStart="@dimen/medium_margin"
                app:layout_constraintStart_toEndOf="@id/txtIbanInfo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/account_name"
            android:layout_marginStart="@dimen/medium_margin"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/large_corner_background"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/medium_margin"
            android:drawablePadding="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:drawableStart="@drawable/account"
            android:drawableTint="@color/white"
            android:textColor="@color/white"
            android:textSize="24sp"
           />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/available_amount"
            android:layout_marginStart="@dimen/medium_margin"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAvailableAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/large_corner_background"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/medium_margin"
            android:drawablePadding="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:drawableStart="@drawable/baseline_attach_money_24"
            android:drawableTint="@color/white"
            android:textColor="@color/white"
            android:textSize="24sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/created_on"
            android:layout_marginStart="@dimen/medium_margin"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCreatedOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/large_corner_background"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/medium_margin"
            android:drawablePadding="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:text="@string/modified_on"
            android:layout_marginStart="@dimen/medium_margin"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtModifiedOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/large_corner_background"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/medium_margin"
            android:drawablePadding="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/holderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/gray_light_ripple"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:text="@string/status"
                android:layout_marginStart="@dimen/medium_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:track="@drawable/bg_track"
                android:thumb="@drawable/ic_thumb_selected"
                android:checked="false"
                android:theme="@style/Theme.AppCompat.NoActionBar"
                android:layout_marginEnd="@dimen/medium_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAction"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/save"
            android:layout_marginTop="@dimen/large_margin"
            android:background="@drawable/large_corner_background"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            android:textAllCaps="false"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/txtInputBalance"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.constraintlayout.widget.ConstraintLayout>